Policies/allow-database-engress-from-go-app.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-database-engress-from-go-app
  namespace: default
spec:
  podSelector: 
    matchLabels:
      app: go-app
  policyTypes:
  - Egress 
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 80
	  endPort: 30000
