Policies/allow-goapp-to-nginx01.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-go-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx-test
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: go-app
