Policies/http-to-goapp.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: http-to-goapp
spec:
  podSelector:
    matchLabels:
      app: go-app
  ingress:
  - ports:
    - port: 8080
